// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaginationIcons on iOS Next page icon renders out an svg and label 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "padding": 12,
    }
  }
  testID="pagination-button-next"
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#006699",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 15,
        "height": 15,
        "marginRight": 10,
        "textAlign": "right",
      }
    }
  >
    <PageLabel
      direction="Next"
    />
  </Text>
  <Svg
    height={12}
    width={7}
  >
    <G
      fill="#006699"
    >
      <Path />
    </G>
  </Svg>
</View>
`;

exports[`PaginationIcons on iOS Previous page icon renders out an svg and label 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "padding": 12,
    }
  }
  testID="pagination-button-previous"
>
  <Svg
    height={12}
    width={7}
  >
    <G
      fill="#006699"
    >
      <Path />
    </G>
  </Svg>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#006699",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 15,
        "height": 15,
        "marginLeft": 10,
        "textAlign": "left",
      }
    }
  >
    <PageLabel
      direction="Previous"
    />
  </Text>
</View>
`;
